[package]
name = "advent2019"
version = "0.1.0"
authors = ["Tomas Farias <tomasfariassantana@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.27.0"
itertools = "0.8.2"
text_io = "0.1.7"
simplelog = "^0.7.4"
log = "0.4.8"
